[gd_scene load_steps=4 format=3 uid="uid://8ie1utu4xcwt"]

[ext_resource type="Texture2D" uid="uid://drbr6ehnlxgl5" path="res://props/field_border.png" id="1_0omf8"]
[ext_resource type="Script" path="res://props/rectangle_collision_shape_2d_textured.gd" id="1_srr6w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwmd0"]
size = Vector2(256, 32)

[node name="CollisionShape2D" type="CollisionShape2D"]
shape = SubResource("RectangleShape2D_uwmd0")
script = ExtResource("1_srr6w")

[node name="Sprite2DLeft" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(-128, 0)
texture = ExtResource("1_0omf8")
region_enabled = true
region_rect = Rect2(0, 0, 2, 32)

[node name="Sprite2DTop" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(0, -16)
texture = ExtResource("1_0omf8")
region_enabled = true
region_rect = Rect2(0, 0, 256, 2)

[node name="Sprite2DRight" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(128, 0)
texture = ExtResource("1_0omf8")
region_enabled = true
region_rect = Rect2(62, 0, 2, 32)

[node name="Sprite2DBottom" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(0, 16)
texture = ExtResource("1_0omf8")
region_enabled = true
region_rect = Rect2(0, 62, 256, 2)
